@@ -1,0 +1,22 @@
+<CONFIG lastUpdated="2004-03-18" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" >
+        <DESC>Demonstration configuration for an audio system called BI_TUNER</DESC>
+         <!-- ______________________________________  BI_PUMP DEFS  ____________________  -->
+        <DEVICE ACTIVE="Y" DEVICE_TYPE="BI_PUMP" DESCRIPTION="Demonstration pump controller">
+                <CONNECTION>
+                        <SERIAL ACTIVE="N" PORT="/dev/tty.USB Serial" SUPPORTS_CD="N" BAUD="9600" STOP_BITS="1" PARITY="N" DATA_BITS="8" FLOW="NONE"/>
+                        <IP ACTIVE="Y" IP_ADDRESS="127.0.0.1" PORT="5001"/>
+                        <IP ACTIVE="N" IP_ADDRESS="192.168.1.70" PORT="5000"/>
+                </CONNECTION>
+                
+                <PARAMETERS>
+                </PARAMETERS>
+                
+                <BI_PUMP>
+                      <THERMOSTAT  KEY="1" DISPLAY_NAME="POOL_TEMP" NAME="Pool Temp" />
+   					   
+                       <PUMP  KEY="2" DISPLAY_NAME="POOL_PUMP" NAME="Pool pump" />
+                </BI_PUMP>
+        </DEVICE>
+        
+ 
+</CONFIG>
