@@ -1,4 +1,4 @@
-#Thu Jun 14 17:25:01 EST 2007
+#Fri Jun 15 13:52:34 EST 2007
 major_version=1.6b
-minor_version=55
+minor_version=56
 app_name=eLife
