@@ -1,0 +1,56 @@
+package au.com.BI.Pump;
+
+
+import java.util.List;
+import java.util.logging.Logger;
+
+import org.jdom.Element;
+
+import au.com.BI.Config.RawHelper;
+import au.com.BI.Util.DeviceModel;
+import au.com.BI.Util.MessageDirection;
+
+public class PumpFactory {
+	Logger logger;
+	
+	private PumpFactory () {
+		logger = Logger.getLogger(this.getClass().getPackage().getName());	
+	}
+
+	private static PumpFactory _singleton = null;
+	
+	public static PumpFactory getInstance() {
+		if (_singleton == null) {
+			_singleton = new PumpFactory();
+		}
+		return (_singleton);
+	}
+	
+	/**
+	 * Parses a pump device
+	 *
+	 * @param targetDevices
+	 *            The list of DeviceModels of this type
+	 * @param element
+	 *            The element
+	 * @param type
+	 *            INPUT | OUTPUT | MONITORED
+	 */
+	public void addPump(DeviceModel targetDevice, List <DeviceModel>clientModels,
+			Element element, MessageDirection type, int connectionType,String groupName,RawHelper rawHelper) {
+		String key = element.getAttributeValue("KEY");
+		String command = element.getAttributeValue("COMMAND");
+		String display_name = element.getAttributeValue("DISPLAY_NAME");
+		Pump pump = new Pump (display_name,connectionType);
+
+		key = targetDevice.formatKey(key,pump);
+			
+		pump.setKey (key);
+		pump.setOutputKey(display_name);
+		pump.setCommand(command);
+		pump.setGroupName(groupName);
+		targetDevice.addStartupQueryItem(key, pump, type);
+		targetDevice.addControlledItem(key, pump, type);
+		targetDevice.addControlledItem(display_name, pump, MessageDirection.FROM_FLASH);
+	}
+}
