@@ -11,6 +11,7 @@ package au.com.BI.Util;
  */
 
 import au.com.BI.Camera.Camera;
+import au.com.BI.Pump.Pump;
 import au.com.BI.Command.*;
 import au.com.BI.Comms.CommsCommand;
 import au.com.BI.Comms.CommsFail;
@@ -895,6 +896,14 @@ public class SimplifiedModel extends ModelParameters implements DeviceModel {
 							returnWrapper);
 					break;
 
+				case DeviceType.PUMP:
+					logger.log(Level.FINE,
+							"A command for a pump  was issued from "
+									+ device.getName());
+					buildPumpControlString((Pump) device, command,
+							returnWrapper);
+					break;
+					
 				case DeviceType.ALERT:
 					logger.log(Level.FINE,
 							"A command for an Alert device was issued from "
@@ -1359,6 +1368,10 @@ public class SimplifiedModel extends ModelParameters implements DeviceModel {
 	}
 
 	public void buildAVControlString(AV device, CommandInterface command,
+			ReturnWrapper returnWrapper) throws ModelException {
+	}
+	
+	public void buildPumpControlString(Pump device, CommandInterface command,
 			ReturnWrapper returnWrapper) throws ModelException {
 	}
 
